kubernetes/redis-slave-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: redis-slave
  labels:
    app: redis
    role: slave
spec:
  ports:
  - port: 6379
    targetPort: redis-server
  selector:
    app: redis
    role: slave
