kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  rules:
    - host: guestbook-go
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: guestbook-go
                port:
                  number: 3000
